# inmobi-intel

./: .env.example  .gitignore  .prettierignore  CLAUDE.md  KICKOFF-PROMPT-FASE-1.md  README.md  package.json  pnpm-lock.yaml  tsconfig.base.json
.github/workflows/: ci.yml  scrape-daily.yml
apps/scrapers/: .env.example  .env.production.local.example  README.md  probe_pagination.py  pyproject.toml
apps/scrapers/geocode/: __init__.py  __main__.py  geocoder.py  repository.py
apps/scrapers/opportunity/: __init__.py  __main__.py  repository.py  scorer.py
apps/scrapers/scrapers/: __init__.py  argenprop.py  argenprop_parser.py  base.py  config.py  db.py  exchange.py  logging_config.py  mercadolibre.py  mercadolibre_api.py  models.py  parser.py  zonaprop.py  zonaprop_parser.py
apps/scrapers/scripts/: apply_barrio_slugs.py  capture_fixture.py  discover_barrio_slugs.py  probe_pagination_live.py  register-scrape-task.ps1  scrape-all.ps1  smoke_test.py
apps/scrapers/tests/: test_argenprop_parser.py  test_geocoder.py  test_mercadolibre_api.py  test_parser.py  test_scorer.py  test_session_exit_code.py  test_zonaprop_parser.py  test_zones.py
apps/scrapers/tests/fixtures/: argenprop_home.html  argenprop_mdp_dpto_venta.html  argenprop_mdp_venta.html  ml_mdp_venta_real.html  zonaprop_mdp_dpto_venta.html
apps/web/: README.md  next.config.ts  package.json  tailwind.config.ts  tsconfig.json  vercel.json
docs/decisions/: 001-prisma-as-schema-source-of-truth.md  002-postgres-vanilla-en-fase-1.md  003-playwright-en-fase-1.md  (+8 more)
infrastructure/: README.md  docker-compose.yml
(+29 files in other folders)
