[project]
name = "inmobi-scrapers"
version = "0.1.0"
description = "Workers de scraping para Inmobi Intel"
authors = [{ name = "Mati", email = "matimuniz2@gmail.com" }]
requires-python = ">=3.11,<4.0"
dependencies = [
    "httpx>=0.27,<1.0",
    "pydantic>=2.9,<3.0",
    "psycopg[binary]>=3.2,<4.0",
    "tenacity>=9.0,<10.0",
    "structlog>=24.4,<25.0",
    "python-dotenv>=1.0,<2.0",
    "playwright>=1.49,<2.0",
    "parsel>=1.9,<2.0",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"
respx = "^0.21.0"
ruff = "^0.7.0"

[build-system]
requires = ["poetry-core>=2.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
